--- a/jx-requirements.yml
+++ b/jx-requirements.yml
@@ -5,7 +5,8 @@ spec:
     enabled: false
     schedule: ""
   cluster:
-    chartRepository: http://bucketrepo.jx.svc.cluster.local/bucketrepo/charts
+    chartKind: pages
+    chartRepository: https://github.com/hazem-internship/gow-new-1.git
     clusterName: kind
     devEnvApprovers:
     - todo
@@ -20,7 +21,7 @@ spec:
   - key: staging
   - key: production
   ingress:
-    domain: ""
+    domain: 10.0.0.100.nip.io
     externalDNS: false
     namespaceSubDomain: -jx.
     tls:
