--- a/helmfiles/jx/helmfile.yaml
+++ b/helmfiles/jx/helmfile.yaml
@@ -9,11 +9,12 @@ repositories:
   url: https://jenkins-x-charts.github.io/repo
 releases:
 - chart: jxgh/jxboot-helmfile-resources
-  version: 1.1.278
+  version: 1.1.276
   name: jxboot-helmfile-resources
   values:
   - ../../versionStream/charts/jxgh/jxboot-helmfile-resources/values.yaml.gotmpl
   - jx-values.yaml
+  - jxboot-helmfile-resources-values.yaml
 - chart: jxgh/jenkins-x-crds
   version: 3.0.12
   name: jenkins-x-crds
@@ -32,7 +33,7 @@ releases:
   values:
   - jx-values.yaml
 - chart: jxgh/lighthouse
-  version: 1.11.4
+  version: 1.11.3
   name: lighthouse
   values:
   - ../../versionStream/charts/jxgh/lighthouse/values.yaml.gotmpl
@@ -55,7 +56,7 @@ releases:
   values:
   - jx-values.yaml
 - chart: jxgh/jx-kh-check
-  version: 0.0.78
+  version: 0.0.80
   name: health-checks-jx
   values:
   - ../../versionStream/charts/jxgh/health-checks-jx/values.yaml.gotmpl
