--- a/.jx/gitops/source-config.yaml
+++ b/.jx/gitops/source-config.yaml
@@ -9,6 +9,7 @@ spec:
     providerKind: github
     repositories:
     - name: thingsboard
+    - name: thingsboard1
     scheduler: in-repo
   slack:
     channel: '#jenkins-x-pipelines'
