--- a/config-root/namespaces/tekton-pipelines/tekton-pipeline/config-artifact-pvc-cm.yaml
+++ b/config-root/namespaces/tekton-pipelines/tekton-pipeline/config-artifact-pvc-cm.yaml
@@ -24,9 +24,9 @@ metadata:
     gitops.jenkins-x.io/pipeline: 'namespaces'
   annotations:
     meta.helm.sh/release-name: 'tekton-pipeline'
-# data:
+ data:
 #   # size of the PVC volume
-#   size: 5Gi
+   size: 5Gi
 #
 #   # storage class of the PVC volume
-#   storageClassName: storage-class-name
+   storageClassName: nfs
