--- a/versionStream/charts/jxgh/bucketrepo/secret-schema.yaml
+++ b/versionStream/charts/jxgh/bucketrepo/secret-schema.yaml
@@ -56,4 +56,5 @@ spec:
             - url: "https://repo.spring.io/milestone/"
             - url: "https://repo.spring.io/release/"
             - url: "http://uk.maven.org/maven2/"
+            - url: "https://repo.gradle.org/ui/native/libs-releases-local/"
 
