--- a/versionStream/charts/jxgh/jxboot-helmfile-resources/secret-schema.yaml
+++ b/versionStream/charts/jxgh/jxboot-helmfile-resources/secret-schema.yaml
@@ -46,7 +46,7 @@ spec:
                       <id>bucketrepo</id>
                       <name>bucketrepo mirror</name>
                       <mirrorOf>*</mirrorOf>
-                      <url>http://bucketrepo/bucketrepo/</url>
+                      <url>https://repo.maven.apache.org/maven2</url>
                   </mirror>
                 </mirrors>
         {{- else if and (hasKey .Requirements "repository") (eq .Requirements.repository "none") }}
