--- a/versionStream/charts/jxgh/jxboot-helmfile-resources/secret-schema.yaml
+++ b/versionStream/charts/jxgh/jxboot-helmfile-resources/secret-schema.yaml
@@ -168,8 +168,8 @@ spec:
                     </repositories>
                     <pluginRepositories>
                         <pluginRepository>
-                            <id>central</id>
-                            <url>http://central</url>
+                            <id>gradle</id>
+                            <url>https://repo.gradle.org/gradle/libs-releases-local/</url>
                             <releases><enabled>true</enabled></releases>
                             <snapshots><enabled>true</enabled></snapshots>
                         </pluginRepository>
