--- a/versionStream/charts/jxgh/jxboot-helmfile-resources/secret-schema.yaml
+++ b/versionStream/charts/jxgh/jxboot-helmfile-resources/secret-schema.yaml
@@ -42,15 +42,6 @@ spec:
             <!--This sends everything else to /public -->
         {{- if and (hasKey .Requirements "repository") (eq .Requirements.repository "bucketrepo") }}
               <mirrors>
-                  <mirror>
-                      <id>bucketrepo</id>
-                      <name>bucketrepo mirror</name>
-                      <mirrorOf>*</mirrorOf>
-                      <url>http://bucketrepo/bucketrepo/</url>
-                  </mirror>
-                </mirrors>
-        {{- else if and (hasKey .Requirements "repository") (eq .Requirements.repository "none") }}
-              <mirrors>
                 <mirror>
                   <id>central</id>
                   <name>US Central</name>
@@ -62,6 +53,12 @@ spec:
                   <name>UK Central</name>
                   <url>https://uk.maven.org/maven2</url>
                   <mirrorOf>central</mirrorOf>
+                </mirror>
+                <mirror>
+                  <id>gradle</id>
+                  <name>gradle</name>
+                  <url>https://repo.gradle.org/gradle/libs-releases-local/</url>
+                  <mirrorOf>gradle</mirrorOf>
                 </mirror>
               </mirrors>
         {{- else }}
